feat: env file added to docker compose

--- a/sql_monitor/stack/grafana/datasources.yml
+++ b/sql_monitor/stack/grafana/datasources.yml
@@ -14,7 +14,7 @@ datasources:
     type: mssql
     uid: sqlserver_ds    
     access: proxy
-    url: ${DB_HOST}:${DB_PORT}
+    url: ${DB_HOST}
     user: ${DB_USER}
     secureJsonData:
       password: ${DB_PASSWORD}
